Adding changes and photos

--- a/public/career/index.html
+++ b/public/career/index.html
@@ -685,7 +685,7 @@
       <div class="col-lg-7 ml-auto">
         <div class="text-block">
           <h2><span class="rev">reach us</span></h2>
-          <p>The dawn of the digital age and the need for a significant leap forward is here. We believe that every business has the opportunity to move into this new age with the right mindset. Contact us today to begin understanding how Omega can propel your business.</p>
+          <p>Contact us today to discuss your marine engineering and electronics requirements. Let us navigate the challenges together and propel your maritime ventures to success. Your journey starts with HarborTech.</p>
         </div>
       </div>
     </div>
