--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@
             <div class="content col-10 p-0 ml-auto">
               <h2 >
                 <span class="rev">
-                  Marine Engineering
+                  Maintenance Redefined
                 </span>
               </h2>
               <h3>Elevating Your Marine Experience with Cutting-Edge Technology, Craftsmanship, and Performance.</h3>
@@ -302,6 +302,17 @@
             </div>
           </div>
           
+          <div class="product-item">
+            <img src="https://harbortech.co/images/product/product-06.jpg" alt="product-image">
+            <div class="overlay">
+              <div class="content">
+                <h5>Traditional soft Shackles</h5>
+                <p>Light, strong, dependable, and useful for all sorts of applications where a stainless shackle would otherwise be employed. One end is a knot; the other end is a splice. Made with SK-78, &amp; Available in various sizes.</p>
+                <a href="https://harbortech.co">Learn More</a>
+              </div>
+            </div>
+          </div>
+          
         </div>
       </div>
     </div>
@@ -391,7 +402,7 @@
 
 <!-- Google Map API -->
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCC72vZw-6tGqFyRhhg5CkF2fqfILn2Tsw"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDtUhna4NjvGFUMoYbTZRXB7wKPoW7mRfA"></script>
 
 
 <!-- Main Script -->
