made changes to more titles

--- a/public/index.html
+++ b/public/index.html
@@ -262,7 +262,7 @@
             <img src="https://harbortech.co/images/product/product-03.jpg" alt="product-image">
             <div class="overlay">
               <div class="content">
-                <h5>Soft Shackles</h5>
+                <h5>Covered Soft Shackles</h5>
                 <p>These soft shackles are covered with Dyneema® chafe sleeve for extra wear resistance. They are incredibly strong, inexpensive, and absolutely the lightest way to make connections.  Great for halyards, jib sheets, and anything else you can think of.</p>
                 <a href="https://harbortech.co">Learn More</a>
               </div>
