--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@
             <div class="content col-10 p-0 ml-auto">
               <h2 >
                 <span class="rev">
-                  Marine Technology
+                  Powering Progress
                 </span>
               </h2>
               <h3>Elevating Your Marine Experience with Cutting-Edge Technology, Craftsmanship, and Performance.</h3>
